<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tin 365</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_modern">ModernActivity</string>
    <string name="nodatawasfound">Không tìm thấy data</string>
    <string name="title_activity_modern_contents">ModernContents</string>
    <string name="tindaluu">Tin đã lưu</string>
    <string name="nguontin">Nguồn tin</string>
    <string name="caidat">Cài đặt</string>
    <string name="gioithieu">Giới thiệu</string>
    <string name="title_activity_modern_details">ModernDetails</string>
    <string name="title_activity_tradition_news">TraditionNews</string>
    <string name="title_activity_bookmark">Đánh dấu</string>
    <string name="title_activity_conment">Bình luận</string>
    <string name="hiendai">Hiện đại</string>
    <string name="faceID">653465058041842</string>
    <string name="faceIDOld">560606707380303</string>
    <string name="faceIDshareNew">1411430255804815</string>
    <string name="loading">Loading ...</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_add_source">AddSourceActivity</string>
    <string name="title_activity_tradition_details">TraditionDetailsActivity</string>
    <string name="title_activity_football">Tin bóng đá</string>
    <string name="title_activity_hot_deals">HotDealsActivity</string>
    <string name="chooseYourCity">Chọn thành phố của bạn</string>
    <string name="FBFanPage">https://m.facebook.com/tin365app</string>
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
        this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="buffering">Loading</string>
    <string name="title_activity_hot_deals_details">HotDealsDetailsActivity</string>
    <string name="coloixayrakhongthetaiduocdulieu">Có lỗi xảy ra. Không tải được dữ liệu.</string>
    <string name="themnguon">Thêm nguồn</string>
    <string name="ngaytruoc">" ngày trước"</string>
    <string name="giotruoc">" giờ trước"</string>
    <string name="phuttruoc">" phút trước"</string>
    <string name="baivietdangcapnhat">Bài viết sẽ cập nhật sau.</string>
    <string name="eventLoginFb">loginFB</string>
    <string name="eventShareFb">shareFB</string>
    <string name="eventaddBookMark">addBookMark</string>
    <string name="eventshareWithoutFB">shareWithoutFB</string>
    <string name="eventoriginalNews">originalNews</string>
    <string name="eventcmtArticle">cmtArticle</string>
    <string name="eventcontact">contact</string>
    <string name="eventvideoGoal">videoGoal</string>
    <string name="eventWorldCup2014">videoGoal</string>
    <string name="eventwatchVideoGoal">watchVideoGoal</string>
    <string name="eventBookMark">bookMark</string>
    <string name="eventchangeAppViewtoTra">changeAppViewtoTra</string>
    <string name="eventchangeAppViewtoModern">changeAppViewtoModern</string>
    <string name="eventsettingColorTile">settingColorTile</string>
    <string name="eventaddSources">addSources</string>
    <string name="eventaddSpecialSources">addSpecialSources</string>
    <string name="dayago">" ngày trước"</string>
    <string name="hourago">" giờ trước"</string>
    <string name="minuteago">" phút trước"</string>
    <string name="internetConnection">Đã xảy ra lỗi kết nối! Vui lòng kiểm tra internet của bạn</string>
    <string name="title_activity_bong_da365">BongDa365Activity</string>
    <string name="bongda365_sliding_menu_tintucworldcup2014"> Tin Tức World cup 2014</string>
    <string name="bongda365_sliding_menu_lichthidauketqua">Lịch thi đấu - Kết quả</string>
    <string name="bongda365_sliding_menu_thuvienvideo">Thư viện Video</string>
    <string name="bongda365_sliding_menu_tyle">Tỷ lệ</string>
    <string name="bongda365_sliding_menu_doihinh">Đội hình</string>
    <string name="title_activity_bong_da_details">BongDaDetailsActivity</string>
    <string name="bongda365_xemvideobenduoi">\nXem Video ở dưới\n</string>
    <string name="bongda365_xemtablebenduoi">\nXem bảng ở dưới\n</string>
    <string name="bongda365_thuvienVideo">Thư viện video</string>
    <string name="title_activity_thu_vien_video">ThuVienVideo</string>
    <string name="worldcup2014">Bóng đá tổng hợp</string>
    <string name="videobongda">Video Bóng đá</string>
    <string name="giaodien">Giao diện</string>
    <string name="mautieude">Màu Tiêu đề</string>
    <string name="phienban">Phiên bản</string>
    <string name="lienhe">Liên hệ</string>
    <string name="khoiphucmacdinh">Khôi phục mặc định</string>
    <string name="tintonghop">Tin tổng hợp</string>
    <string name="themnguon">+ Thêm nguồn</string>
    <string name="gockhuyenmai">Góc khuyến mãi</string>
    <string name="chondanhmuc">Chọn Danh Mục</string>
    <string name="vietbinhluan">Viết bình luận ....</string>
    <string name="cat_dat_notification">Nhận tin HOT</string>
    <string name="bat_chuc_nang_nhan_tin_hot">Bạn đã bật chức năng nhận tin HOT</string>
    <string name="tat_chuc_nang_nhan_tin_hot">Bạn đã tắt chức năng nhận tin HOT</string>
    <string name="thaydoingonngu">Thay đổi ngôn ngữ</string>
    <string name="tin365capnhatbaibaomoi">Tin 365 cập nhật bài báo mới</string>

    <string name="thongbao">Thông báo!</string>
    <string name="bancomuonnhantinhot">Bạn có muốn bật chức năng nhận tin HOT?</string>
    <string name="truyenthong">Truyền thống</string>
    <string name="khongcodulieutrongphannay">Không có dữ liệu trong phần này</string>
    <string name="loikhiloadcat">Có lỗi xãy ra, bạn có muốn tải lại ứng dụng không ?</string>
    <string name="tailai">Tải lại</string>
    <string name="thoat">Thoát</string>
</resources>